--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,57 @@
 
 .DS_Store
+node_modules/.bin/nodemon
+node_modules/.bin/nodetouch
+node_modules/.bin/nopt
+node_modules/.bin/semver
+node_modules/.package-lock.json
+node_modules/abbrev/abbrev.js
+node_modules/abbrev/LICENSE
+*.json
+*.md
+*.ts
+*.js
+node_modules/anymatch/LICENSE
+*.yml
+node_modules/binary-extensions/license
+node_modules/brace-expansion/LICENSE
+node_modules/.package-lock.json
+node_modules/braces/LICENSE
+node_modules/concat-map/LICENSE
+node_modules/chokidar/LICENSE
+*.markdown
+*.node
+node_modules/fill-range/LICENSE
+node_modules/glob-parent/LICENSE
+node_modules/fsevents/LICENSE
+node_modules/has-flag/license
+node_modules/ignore-by-default/LICENSE
+node_modules/is-binary-path/license
+node_modules/is-extglob/LICENSE
+node_modules/is-glob/LICENSE
+node_modules/is-number/LICENSE
+node_modules/minimatch/LICENSE
+*.exe
+*.txt
+node_modules/nodemon/LICENSE
+node_modules/nodemon/node_modules/debug/LICENSE
+node_modules/nopt/LICENSE
+node_modules/nopt/.npmignore
+node_modules/normalize-path/LICENSE
+node_modules/picomatch/LICENSE
+node_modules/pstree.remy/LICENSE
+node_modules/pstree.remy/tests/fixtures/out2
+node_modules/pstree.remy/tests/fixtures/out1
+node_modules/readdirp/LICENSE
+node_modules/semver/bin/semver
+node_modules/semver/LICENSE
+*.bnf
+node_modules/simple-update-notifier/LICENSE
+node_modules/simple-update-notifier/node_modules/.bin/semver
+node_modules/simple-update-notifier/node_modules/semver/LICENSE
+node_modules/supports-color/license
+node_modules/to-regex-range/LICENSE
+node_modules/touch/LICENSE
+node_modules/undefsafe/.jscsrc
+node_modules/undefsafe/.jshintrc
+node_modules/undefsafe/LICENSE
